--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -1,8 +1,6 @@
 .item {
-  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-size: 10px;
-  font-weight: 500;
   color: #5c6a79;
   display: block;
   list-style: none;
@@ -13,7 +11,13 @@
 
   &:hover {
     color: #1c2a39;
-    font-weight: 900;
+    font-weight: 700;
+    font-size: 10px;
+  }
+
+  &.active {
+    color: #1c2a39;
+    font-weight: 700;
     font-size: 10px;
   }
 }
