--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,16 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Open+Sans&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  @font-face {
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url(/fonts/Montserrat-Black.woff2) format("woff2");
-  }
-}
 
 #__next {
   display: flex;
