--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,3 +8,10 @@
   display: flex;
   justify-content: center;
 }
+
+.activeCategory {
+  color: #1c2a39;
+  font-weight: 700;
+  font-size: 16px;
+  list-style: outside;
+}
